5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1635_2443.log
== TEST (2019-04-11 13:47:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("raio:"))
x = float(input("altura da coluna de ar:"))
n = float(input("numero:"))
if( n == 1):
	v = (pi*(x**2) * ((3*r) - x)) / 3
else ( n == 2):
	v = (((4 * pi * (r**3)) / 3)) - ((pi*(x**2) * ((3*r) - x)) / 3)
print(v)
-- ERROR:
File "XXXX", line 10
    else ( n == 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:47:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("raio:"))
x = float(input("altura da coluna de ar:"))
n = float(input("numero:"))
if( n == 1):
	v = (pi*(x**2) * ((3*r) - x)) / 3
else ( n == 2):
	v = (((4 * pi * (r**3)) / 3)) - ((pi*(x**2) * ((3*r) - x)) / 3)
print(round(v , 4))
-- ERROR:
File "XXXX", line 10
    else ( n == 2):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 13:48:51) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("raio:"))
x = float(input("altura da coluna de ar:"))
n = float(input("numero 1 / 2:"))
if( n == 1):
	v = (pi*(x**2) * ((3*r) - x)) / 3
else :
	v = (((4 * pi * (r**3)) / 3)) - ((pi*(x**2) * ((3*r) - x)) / 3)
print(round(v , 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 13:49:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
from math import*
r = float(input("raio:"))
x = float(input("altura da coluna de ar:"))
n = float(input("numero 1 / 2:"))
if( n == 1):
	v = (pi*(x**2) * ((3*r) - x)) / 3
else :
	v = (((4 * pi * (r**3)) / 3)) - ((pi*(x**2) * ((3*r) - x)) / 3)
print(round(v , 4))
-- EXECUTION TIME:
0.160123
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
